--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,10 @@
     <string name="app_name">Gallery</string>
     <string name="photos">Photos</string>
     <string name="albums">Albums</string>
+    <string name="add">Add</string>
+    <string name="quick_settings">Quick Settings</string>
+
+    <string name="search">Search</string>
+    <string name="search_photos">Search your photos and videos</string>
+    <string name="search_albums">Search your albums</string>
 </resources>
